force-app/main/default/src/objects/Case/fields/PJN_Activity_Timeline_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Activity_Timeline_Status__c</fullName>
    <formula>CASE(
    TEXT(Status), 
    &apos;Open&apos;, &apos;open&apos;, 
    &apos;Closed&apos;, &apos;closed&apos;,
    &apos;Cancelled&apos;, &apos;cancelled&apos;,
    &apos;Open&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Timeline Status</label>
    <type>Text</type>
</CustomField>