force-app/main/default/src/objects/Case/fields/PJN_Cadence__c.field-meta.xml
<CustomField>
    <fullName>PJN_Cadence__c</fullName>
    <description>Indicates time interval for the Repeat Every field.</description>
    <label>Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>