force-app/main/default/src/objects/Case/fields/PJN_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>PJN_Cancellation_Reason__c</fullName>
    <description>Reason for an activity being cancelled without being attempted.</description>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No longer needed</fullName>
            </value>
            <value>
                <fullName>Already completed</fullName>
            </value>
            <value>
                <fullName>Stage skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>