force-app/main/default/src/objects/Case/fields/PJN_Care_Manager__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Manager__c</fullName>
    <description>Returns the name of the Care Manager assigned to the care plan.</description>
    <formula>IF(
NOT(ISBLANK(ParentId)),
Parent.Owner:User.FirstName + &quot; &quot; + Parent.Owner:User.LastName,
Owner:User.FirstName + &quot; &quot; + Owner:User.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Manager</label>
    <type>Text</type>
</CustomField>