force-app/main/default/src/objects/Case/fields/PJN_Care_Plan_Start_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan_Start_Status__c</fullName>
    <description>Used to trigger a care plan to start and track it&apos;s status</description>
    <label>Care Plan Start Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PJN_Initiate</fullName>
                <label>Initiate</label>
            </value>
            <value>
                <fullName>PJN_Pending</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>PJN_Started</fullName>
                <label>Started</label>
            </value>
            <value>
                <fullName>PJN_Error</fullName>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>