force-app/main/default/src/objects/Case/fields/PJN_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Caregiver</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Caregiver)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>