force-app/main/default/src/objects/Case/fields/PJN_Caregiver_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver_Formula__c</fullName>
    <description>Displays the Caregiver of the Care Plan.</description>
    <formula>IF(
NOT(ISBLANK(ParentId)),
HYPERLINK(&quot;/&quot;&amp;Parent.PJN_Caregiver__c, Parent.PJN_Caregiver__r.FirstName + &quot; &quot; + Parent.PJN_Caregiver__r.LastName, &quot;_self&quot;),
HYPERLINK(&quot;/&quot;&amp;PJN_Caregiver__c, PJN_Caregiver__r.FirstName + &quot; &quot; + PJN_Caregiver__r.LastName, &quot;_self&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caregiver</label>
    <type>Text</type>
</CustomField>