force-app/main/default/src/objects/Case/fields/PJN_CarePlan_Problem__c.field-meta.xml
<CustomField>
    <fullName>PJN_CarePlan_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlan Problem</label>
    <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>PJN_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>