force-app/main/default/src/objects/Case/fields/PJN_Case_Indicator__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Indicator__c</fullName>
    <description>Displays an indicator icon based on a non care plan case&apos;s Priority and Due Date values.</description>
    <formula>IF(
RecordType.DeveloperName == &quot;CarePlan&quot; || IsClosed,
NULL,
IF(
ISBLANK(HealthCloudGA__DueDate__c),
IMAGE(&quot;/resource/PJNImages/NoDueDate.png?V=1&quot;,&quot;No Due Date&quot;, 30, 110),
IF(
HealthCloudGA__DueDate__c == TODAY(),
IMAGE(&quot;/resource/PJNImages/DueToday.png?V=1&quot;,&quot;Due Today&quot;, 30, 105),
IF(
HealthCloudGA__DueDate__c &lt; TODAY(),
IMAGE(&quot;/resource/PJNImages/Overdue.png?V=1&quot;,&quot;Overdue&quot;, 30, 105),
IMAGE(&quot;/resource/PJNImages/NotDue.png?V=1&quot;,&quot;Not Due&quot;, 30, 105)
)
)
)
)</formula>
    <label>Case Indicator</label>
    <type>Text</type>
</CustomField>