force-app/main/default/src/objects/Case/fields/PJN_Closed_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Closed_Date_Formula__c</fullName>
    <description>Returns the date portion of the standard Closed Date date/time field.</description>
    <formula>IF(NOT(ISBLANK(ClosedDate)),
   DATEVALUE(ClosedDate),
   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date Formula</label>
    <type>Date</type>
</CustomField>