force-app/main/default/src/objects/Case/fields/PJN_Coverage_Investigation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Coverage_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Coverage Investigation where the follow-up Case was generated from.</description>
    <label>Coverage Investigation</label>
    <referenceTo>PJN_Coverage_Investigation__c</referenceTo>
    <relationshipLabel>Follow-Up Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>