force-app/main/default/src/objects/Case/fields/PJN_Coverage_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Coverage_Status__c</fullName>
    <description>Returns the Coverage Outcome value from the Care Plan&apos;s active Coverage Investigation.</description>
    <formula>IF(
ISBLANK(TEXT( PJN_Active_Coverage_Investigation__r.PJN_Outcome__c )),
&quot;Unknown&quot;,
TEXT( PJN_Active_Coverage_Investigation__r.PJN_Outcome__c )
)</formula>
    <label>Coverage Status</label>
    <type>Text</type>
</CustomField>