force-app/main/default/src/objects/Case/fields/PJN_Date_Suggestion_Sent_to_Veeva_CRM__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Suggestion_Sent_to_Veeva_CRM__c</fullName>
    <description>Datetime the Case is sent to Veeva CRM as a Suggestion.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Datetime the Case is sent to Veeva CRM as a Suggestion.</inlineHelpText>
    <label>Date Suggestion Sent to Veeva CRM</label>
    <type>DateTime</type>
</CustomField>