force-app/main/default/src/objects/Case/fields/PJN_Enrollment_Activity__c.field-meta.xml
<CustomField>
    <fullName>PJN_Enrollment_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The source enrollment activity that initiated the creation of a care plan.</description>
    <inlineHelpText>The source enrollment activity that initiated the creation of a care plan.</inlineHelpText>
    <label>Enrollment Activity</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>PJN_Care_Plans_From_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>