force-app/main/default/src/objects/Case/fields/PJN_Enrollment_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Enrollment_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Address</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>