force-app/main/default/src/objects/Case/fields/PJN_Enrollment_Completed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Enrollment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Completed?</label>
    <type>Checkbox</type>
</CustomField>