force-app/main/default/src/objects/Case/fields/PJN_Last_Updated_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Last_Updated_Formula__c</fullName>
    <formula>DATEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>