force-app/main/default/src/objects/Case/fields/PJN_Most_Recent_Call_Attempt2__c.field-meta.xml
<CustomField>
    <fullName>PJN_Most_Recent_Call_Attempt2__c</fullName>
    <description>The date/time of the most recent call attempt related to this case</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time of the most recent call attempt related to this case</inlineHelpText>
    <label>Most Recent Call Attempt</label>
    <type>DateTime</type>
</CustomField>