force-app/main/default/src/objects/Case/fields/PJN_Number_of_Attempts2__c.field-meta.xml
<CustomField>
    <fullName>PJN_Number_of_Attempts2__c</fullName>
    <description>Count of contacts attempts associated to this case</description>
    <inlineHelpText>Count of contacts attempts associated to this case</inlineHelpText>
    <label>Number of Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>