force-app/main/default/src/objects/Case/fields/PJN_Override_Next_Activity__c.field-meta.xml
<CustomField>
    <fullName>PJN_Override_Next_Activity__c</fullName>
    <description>The due date for the recurring activity.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Override Next Activity</label>
    <type>Date</type>
</CustomField>