force-app/main/default/src/objects/Case/fields/PJN_Owner_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Owner_Name_Formula__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>