force-app/main/default/src/objects/Case/fields/PJN_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Name__c</fullName>
    <description>Returns the first and last name of the patient associated to the care plan or activity.</description>
    <formula>HYPERLINK(&quot;/&quot;+AccountId, Account.FirstName + &quot; &quot; + Account.LastName , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>