force-app/main/default/src/objects/Case/fields/PJN_Physician__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a patient&apos;s care plan physician account.</description>
    <label>Physician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Physician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Physician)</relationshipLabel>
    <relationshipName>CasesPhysician</relationshipName>
    <type>Lookup</type>
</CustomField>