force-app/main/default/src/objects/Case/fields/PJN_Physician_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Formula__c</fullName>
    <description>Returns the first and last name of the physician account associated to the care plan or activity.</description>
    <formula>IF(
NOT(ISBLANK(ParentId)),
HYPERLINK(&quot;/&quot;&amp; Parent.PJN_Physician__c , Parent.PJN_Physician__r.FirstName + &quot; &quot; + Parent.PJN_Physician__r.LastName, &quot;_self&quot;),
HYPERLINK(&quot;/&quot;&amp;PJN_Physician__c, PJN_Physician__r.FirstName + &quot; &quot; + PJN_Physician__r.LastName, &quot;_self&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician</label>
    <type>Text</type>
</CustomField>