force-app/main/default/src/objects/Case/fields/PJN_Physician_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Full_Name__c</fullName>
    <formula>PJN_Physician__r.FirstName + &apos; &apos; + PJN_Physician__r.LastName</formula>
    <label>Physician Full Name</label>
    <type>Text</type>
</CustomField>