force-app/main/default/src/objects/Case/fields/PJN_Physician_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Id__c</fullName>
    <description>The Id of the Physician specified on the Care Team.</description>
    <formula>IF(!ISBLANK(ParentId), Parent.PJN_Physician__c, PJN_Physician__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician Id</label>
    <type>Text</type>
</CustomField>