force-app/main/default/src/objects/Case/fields/PJN_Primary_Prescription__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Prescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a patient&apos;s primary active prescription.</description>
    <label>Primary Prescription</label>
    <referenceTo>HealthCloudGA__EhrMedicationPrescription__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>CarePlansPrimary</relationshipName>
    <type>Lookup</type>
</CustomField>