force-app/main/default/src/objects/Case/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Care Plans</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>