force-app/main/default/src/objects/Case/fields/PJN_Program_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_DeveloperName__c</fullName>
    <description>Program DeveloperName that this Case/CarePlan is used for</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Program DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>