force-app/main/default/src/objects/Case/fields/PJN_Program_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_Formula__c</fullName>
    <description>Formula to return the name of the case program.</description>
    <formula>PJN_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>