force-app/main/default/src/objects/Case/fields/PJN_Program_Start_Problem__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_Start_Problem__c</fullName>
    <description>The problem to start the program on when initiating. If not provided the first problem is used.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Start Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>