force-app/main/default/src/objects/Case/fields/PJN_Region__c.field-meta.xml
<CustomField>
    <fullName>PJN_Region__c</fullName>
    <description>The region that this case is assigned to.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The region that this case is assigned to.</inlineHelpText>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>