force-app/main/default/src/objects/Case/fields/PJN_Relay_Experience_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Relay_Experience_Filter_Field__c</fullName>
    <description>Filter which Relay Experiences are displayed to a user in the Relay Network Experience List component. Can contain a list of experience filter labels with each label separate by the pipe symbol (|).
For example, display &apos;Case Manager&apos; experiences if running user is Case Manager or &apos;Case Manager | Nurse Educator&quot; if running user is a Nurse Educator.</description>
    <formula>&apos;sfdc&apos;</formula>
    <label>Relay Experience Filter Field</label>
    <type>Text</type>
</CustomField>