force-app/main/default/src/objects/Case/fields/PJN_Repeat__c.field-meta.xml
<CustomField>
    <fullName>PJN_Repeat__c</fullName>
    <defaultValue>(&quot;Doesn&apos;t Repeat&quot;)</defaultValue>
    <description>Indicates whether to new activities should automatically be created when the original is closed.</description>
    <inlineHelpText>When set to &quot;Repeats&quot;, a new Activity will be created when the current one is closed.</inlineHelpText>
    <label>Repeat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doesn&apos;t Repeat</fullName>
            </value>
            <value>
                <fullName>Repeats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>