force-app/main/default/src/objects/Case/fields/PJN_Repeat_Every__c.field-meta.xml
<CustomField>
    <fullName>PJN_Repeat_Every__c</fullName>
    <description>Indicates the number of days in the future which the Due Date will be set to, when the follow-up to a recurring Case is generated.</description>
    <label>Repeat Every</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>