force-app/main/default/src/objects/Case/fields/PJN_Run_ZTT_Against_Enrollment_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Run_ZTT_Against_Enrollment_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to TRUE the code will use the enrollment address of the Physician on Physician update in order to apply the Zip To Team mapping.</description>
    <label>Run ZTT Against Enrollment Address</label>
    <type>Checkbox</type>
</CustomField>