force-app/main/default/src/objects/Case/fields/PJN_Send_to_Veeva_CRM__c.field-meta.xml
<CustomField>
    <fullName>PJN_Send_to_Veeva_CRM__c</fullName>
    <description>Indicates that the Case should be sent to Veeva CRM as a Suggestion.</description>
    <formula>AND(
  IF(!ISBLANK(ParentId),!ISBLANK(Parent.PJN_Physician__r.PJN_NPI__c),
           !ISBLANK(PJN_Physician__r.PJN_NPI__c)),
        Owner:Queue.DeveloperName == &apos;PJN_Escalated_To_CRM&apos;,
        ISBLANK(PJN_Veeva_CRM_Suggestion_Status__c)
)</formula>
    <label>Send to Veeva CRM Suggestion Integration</label>
    <type>Checkbox</type>
</CustomField>