force-app/main/default/src/objects/Case/fields/PJN_Staff__c.field-meta.xml
<CustomField>
    <fullName>PJN_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a patient&apos;s care plan staff account.</description>
    <label>Staff</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Staff)</relationshipLabel>
    <relationshipName>CasesStaff</relationshipName>
    <type>Lookup</type>
</CustomField>