force-app/main/default/src/objects/Case/fields/PJN_Territory__c.field-meta.xml
<CustomField>
    <fullName>PJN_Territory__c</fullName>
    <description>The territory the case is assigned to.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The territory the case is assigned to.</inlineHelpText>
    <label>MS Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>