force-app/main/default/src/objects/Case/fields/PJN_Tertiary_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Tertiary_Member_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a patient&apos;s tertiary active member plan.</description>
    <label>Tertiary Member Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PJN_Member_Plan__c.PJN_Coverage_Order__c</field>
            <operation>equals</operation>
            <value>Tertiary</value>
        </filterItems>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>PJN_Member_Plan__c.PJN_Patient__r.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Cases (Tertiary Member Plan)</relationshipLabel>
    <relationshipName>CarePlansTertiary</relationshipName>
    <type>Lookup</type>
</CustomField>