force-app/main/default/src/objects/Case/fields/PJN_Therapy_Access__c.field-meta.xml
<CustomField>
    <fullName>PJN_Therapy_Access__c</fullName>
    <description>Returns the Coverage Type value from the Care Plan&apos;s active Coverage Investigation.</description>
    <formula>IF(
ISBLANK(TEXT( PJN_Active_Coverage_Investigation__r.PJN_Access_Type__c )),
&quot;Unknown&quot;,
TEXT( PJN_Active_Coverage_Investigation__r.PJN_Access_Type__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Therapy Access</label>
    <type>Text</type>
</CustomField>