force-app/main/default/src/objects/Case/fields/PJN_Therapy_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Therapy_Status__c</fullName>
    <description>A patient&apos;s program treatment journey status. Utilizing Status Global Value Set.</description>
    <label>Therapy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Status</valueSetName>
    </valueSet>
</CustomField>