force-app/main/default/src/objects/Case/fields/PJN_Therapy_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Therapy_Status_Formula__c</fullName>
    <description>Displays the concatenated Therapy Status and Therapy Sub-Status of the Care Plan.</description>
    <formula>IF(
NOT(ISBLANK(ParentId)),
TEXT( Parent.PJN_Therapy_Status__c ) +
IF(NOT(ISBLANK(TEXT(Parent.PJN_Therapy_Sub_Status__c))), &quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot; &amp; TEXT(Parent.PJN_Therapy_Sub_Status__c), NULL),
TEXT( PJN_Therapy_Status__c ) +
IF(NOT(ISBLANK(TEXT(PJN_Therapy_Sub_Status__c))), &quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot; &amp; TEXT(PJN_Therapy_Sub_Status__c), NULL)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Therapy Status</label>
    <type>Text</type>
</CustomField>