force-app/main/default/src/objects/Case/fields/PJN_Therapy_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Therapy_Sub_Status__c</fullName>
    <description>A patient&apos;s program treatment journey sub-status. Utilizing Sub-Status Global Value Set.</description>
    <label>Therapy Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PJN_Therapy_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PJN_Sub_Status</valueSetName>
    </valueSet>
</CustomField>