force-app/main/default/src/objects/Case/fields/PJN_Veeva_CRM_Enrollment_External_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Veeva_CRM_Enrollment_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Veeva CRM Enrollment External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>