force-app/main/default/src/objects/Case/fields/PJN_Veeva_CRM_Suggestion_Error__c.field-meta.xml
<CustomField>
    <fullName>PJN_Veeva_CRM_Suggestion_Error__c</fullName>
    <description>Error from Veeva CRM Case Escalation integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Error from Veeva CRM Case Escalation integration.</inlineHelpText>
    <label>Veeva CRM Suggestion Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>