force-app/main/default/src/objects/Case/fields/PJN_Veeva_CRM_Suggestion_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Veeva_CRM_Suggestion_Record_Type__c</fullName>
    <formula>&apos;Insight_vod&apos;</formula>
    <label>Veeva CRM Suggestion Record Type</label>
    <type>Text</type>
</CustomField>