force-app/main/default/src/objects/Case/fields/PJN_Veeva_CRM_Suggestion_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Veeva_CRM_Suggestion_Status__c</fullName>
    <description>Status as pulled from the associated Veeva CRM Suggestion.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status as pulled from the associated Veeva CRM Suggestion.</inlineHelpText>
    <label>Veeva CRM Suggestion Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>