force-app/main/default/src/objects/Case/fields/PJN_Zip_To_Team__c.field-meta.xml
<CustomField>
    <fullName>PJN_Zip_To_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The record used to align this case to a care team - Created July 11, 2019</description>
    <label>Zip To Team</label>
    <referenceTo>PJN_Zip_To_Team__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>PJN_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>