force-app/main/default/src/objects/Case/fields/Primary_Contact_MVN__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person account which should be used as the primary contact for care plan correspondence - either the program participant themselves or a designated caregiver.</description>
    <label>Primary Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Plans (Primary Contact)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>