force-app/main/default/src/objects/Case/fields/Qualification_Status_MVN__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Status_MVN__c</fullName>
    <label>Qualification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>