force-app/main/default/src/objects/Case/fields/Record_Type_Key_MVN__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Key_MVN__c</fullName>
    <description>Namespace + RecordType DeveloperName</description>
    <formula>RecordType.NamespacePrefix + RecordType.DeveloperName</formula>
    <label>Record Type Key</label>
    <type>Text</type>
</CustomField>