force-app/main/default/src/objects/Case/recordTypes/DEDSI_Participant_CarePlan.recordType-meta.xml
<RecordType>
    <fullName>DEDSI_Participant_CarePlan</fullName>
    <active>false</active>
    <businessProcess>HealthCloudGA__Healthcare</businessProcess>
    <description>Defines a DEDSI Program Participant care plan</description>
    <label>DEDSI Participant CarePlan</label>
</RecordType>