force-app/main/default/src/objects/Case/recordTypes/Libtayo_Marketing_Care_Plan_MVN.recordType-meta.xml
<RecordType>
    <fullName>Libtayo_Marketing_Care_Plan_MVN</fullName>
    <active>true</active>
    <businessProcess>Libtayo Marketing</businessProcess>
    <description>Defines a Libtayo Marketing care plan</description>
    <label>Libtayo Marketing Care Plan</label>
</RecordType>