force-app/main/default/src/objects/Case/recordTypes/MVN_Missing_Information.recordType-meta.xml
<RecordType>
    <fullName>MVN_Missing_Information</fullName>
    <active>true</active>
    <businessProcess>PJN_Care Plan Activity</businessProcess>
    <description>Defines missing enrollment information activities related to a patient&apos;s care plan</description>
    <label>Missing Information</label>
</RecordType>