force-app/main/default/src/objects/Case/recordTypes/PJN_Activity.recordType-meta.xml
<RecordType>
    <fullName>PJN_Activity</fullName>
    <active>true</active>
    <businessProcess>PJN_Care Plan Activity</businessProcess>
    <description>Defines activities related to a patient&apos;s care plan</description>
    <label>Activity</label>
</RecordType>