force-app/main/default/src/objects/Case/recordTypes/PJN_Request.recordType-meta.xml
<RecordType>
    <fullName>PJN_Request</fullName>
    <active>true</active>
    <businessProcess>PJN_Care Plan Activity</businessProcess>
    <description>Defines activities outside of a patient&apos;s care plan like enrollments, and inbound inquiries</description>
    <label>Request</label>
</RecordType>